tests/baselines/reference/functionOverloads19.errors.txt
tests/cases/compiler/functionOverloads19.ts(1,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads19.ts (1 errors) ====
    function foo(bar:{b:string;});
             ~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo(bar:{a:string;});
    function foo(bar:{a:any;}) { return {a:""} }
    